[tool.poetry]
name = "spiffy-mc"
version = "0.1.0"
description = "spiffy-mc is an opinionated, async library for Minecraft server administration tasks"
authors = ["kellador"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
psutil = "^5.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
